correction d'alignement vertical de `.nav-button`

--- a/css/knacss-unminified.css
+++ b/css/knacss-unminified.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
-* www.KNACSS.com v7.0.8 (september, 20 2018) @author: Alsacreations, Raphael Goetter
+* www.KNACSS.com v7.0.9 (october, 24 2018) @author: Alsacreations, Raphael Goetter
 * Licence WTFPL http://www.wtfpl.net/
 */
 /* ----------------------------- */
@@ -2266,7 +2266,8 @@ button:focus {
 }
 
 .nav-button > * {
-  display: flex;
+  display: inline-flex;
+  vertical-align: top;
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
