--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -102,7 +102,8 @@ button {
   -webkit-tap-highlight-color: transparent;
 
   & > * {
-    display: flex;
+    display: inline-flex;
+    vertical-align: top;
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
